; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_splaytree.c_FixupChildLinks.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/rtl/extr_splaytree.c_FixupChildLinks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i64)* @FixupChildLinks to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FixupChildLinks(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %5, align 8
  %9 = call i64 @RtlLeftChild(i64 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = call i64 @RtlLeftChild(i64 %13)
  %15 = call i32 @RtlInsertAsLeftChild(i64 %12, i64 %14)
  br label %16

16:                                               ; preds = %11, %3
  %17 = load i64, i64* %5, align 8
  %18 = call i64 @RtlRightChild(i64 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* %5, align 8
  %23 = call i64 @RtlRightChild(i64 %22)
  %24 = call i32 @RtlInsertAsRightChild(i64 %21, i64 %23)
  br label %25

25:                                               ; preds = %20, %16
  %26 = load i64, i64* %6, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %42, label %28

28:                                               ; preds = %25
  %29 = load i64, i64* %7, align 8
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load i64, i64* %5, align 8
  %33 = call i64 @RtlParent(i64 %32)
  %34 = load i64, i64* %5, align 8
  %35 = call i32 @RtlInsertAsLeftChild(i64 %33, i64 %34)
  br label %41

36:                                               ; preds = %28
  %37 = load i64, i64* %5, align 8
  %38 = call i64 @RtlParent(i64 %37)
  %39 = load i64, i64* %5, align 8
  %40 = call i32 @RtlInsertAsRightChild(i64 %38, i64 %39)
  br label %41

41:                                               ; preds = %36, %31
  br label %42

42:                                               ; preds = %41, %25
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i64 @RtlLeftChild(i64) #1

declare dso_local i32 @RtlInsertAsLeftChild(i64, i64) #1

declare dso_local i64 @RtlRightChild(i64) #1

declare dso_local i32 @RtlInsertAsRightChild(i64, i64) #1

declare dso_local i64 @RtlParent(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
